--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,6 @@ DOMAIN=www.sweetsideofsweden.com
 SHOPIFY_DOMAIN=sweet-side-of-sweden.myshopify.com
 SHOPIFY_TOKEN=319eb651b3464ea882a016ca2085ebc1
 PRISMIC_REPO=https://candy-by-sweden.cdn.prismic.io/api/v2
-STORE_LOCALES=en-US,en-CA,en-GB,de-DE,en-DE,sv-SE,en-SE,en-NO
-STORE_CURRENCIES=USD,EUR,GBP,SEK,CAD,NOK,JPY
+STORE_LOCALES=en-US,en-CA,en-GB,de-DE,en-ES,en-DE,sv-SE,en-NO,en-DK,sv-FI,en-FI
+STORE_CURRENCIES=USD,EUR,AUD,BGN,CAD,CHF,CZK,DKK,GBP,HUF,JPY,KRW,NOK,NZD,PLN,RON,SEK
 GTM=GTM-KGVH3RX
