--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@prismicio/react": "2.7.1",
         "@sentry/nextjs": "7.60.0",
         "@shopify/hydrogen-react": "2023.7.0",
+        "@sweetsideofsweden/next-plugin-preval": "2.0.0",
         "@thebeyondgroup/shopify-rich-text-renderer": "0.2.0",
         "accept-language-parser": "1.5.0",
         "color": "4.2.3",
@@ -48,7 +49,6 @@
         "destyle.css": "4.0.0",
         "graphql": "16.7.1",
         "next": "13.4.12",
-        "next-plugin-preval": "1.2.5",
         "next-query-params": "4.2.3",
         "next-seo": "6.1.0",
         "node-html-parser": "6.1.5",
@@ -68,6 +68,7 @@
         "stylis": "4.3.0",
         "swr": "2.2.0",
         "typescript": "5.1.6",
+        "unfetch": "5.0.0",
         "use-query-params": "2.2.1",
         "uuid": "9.0.0"
     },
@@ -80,6 +81,7 @@
         "@types/enzyme": "3.10.13",
         "@types/node": "18.17.0",
         "@types/react": "18.2.16",
+        "babel-plugin-module-resolver": "^5.0.0",
         "enzyme": "3.11.0",
         "eslint": "8.45.0",
         "eslint-config-next": "13.4.12",
