--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -70,7 +70,7 @@
         "gravatar.js": "2.0.0",
         "lodash.debounce": "4.0.8",
         "million": "3.0.6",
-        "next": "14.2.1",
+        "next": "14.3.0-canary.4",
         "next-auth": "4.24.7",
         "next-seo": "6.5.0",
         "next-sitemap": "4.2.3",
