--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -65,6 +65,9 @@
         "rimraf": "5.0.5",
         "server-only": "0.0.1",
         "typescript": "5.4.5",
+        "vite-plugin-dts": "3.8.3",
+        "vite-tsconfig-paths": "4.3.2",
+        "vite": "5.2.10",
         "vitest": "1.5.0"
     }
 }
