--- a/packages/marketing-common/package.json
+++ b/packages/marketing-common/package.json
@@ -62,6 +62,9 @@
         "glob": "10.3.12",
         "rimraf": "5.0.5",
         "typescript": "5.4.5",
+        "vite-plugin-dts": "3.8.3",
+        "vite-tsconfig-paths": "4.3.2",
+        "vite": "5.2.10",
         "vitest": "1.5.0"
     }
 }
