--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,6 @@
 {
     "$schema": "https://turbo.build/schema.json",
+    "ui": "stream",
     "globalDependencies": [
         "**/.env.*local",
         "tsconfig.json",
