--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -47,7 +47,7 @@
         "@apollo/client": "3.11.7",
         "@apollo/experimental-nextjs-app-support": "0.11.3",
         "@auth/core": "0.34.2",
-        "@next/third-parties": "canary",
+        "@next/third-parties": "14.2.9",
         "@nordcom/commerce-db": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
         "@nordcom/commerce-marketing-common": "workspace:*",
@@ -61,6 +61,7 @@
         "@vercel/analytics": "1.3.1",
         "@vercel/otel": "1.8.1",
         "@vercel/speed-insights": "1.0.5",
+        "@vercel/toolbar": "0.1.18",
         "accept-language-parser": "1.5.0",
         "class-variance-authority": "0.7.0",
         "clsx": "2.1.1",
@@ -75,13 +76,13 @@
         "next-auth": "5.0.0-beta.20",
         "next-seo": "6.6.0",
         "next-sitemap": "4.2.3",
-        "next": "canary",
+        "next": "15.0.0-canary.147",
         "nextjs-toploader": "3.6.15",
         "nprogress": "0.2.0",
         "png-to-ico": "2.1.8",
-        "react-dom": "rc",
+        "react-dom": "18.3.1",
         "react-icons": "5.1.0",
-        "react": "rc",
+        "react": "18.3.1",
         "sharp": "0.33.5",
         "sonner": "1.5.0",
         "tailwind-merge": "2.5.2",
@@ -102,9 +103,10 @@
         "@types/nprogress": "0.2.3",
         "@types/react-dom": "18.2.24",
         "@types/react": "18.2.75",
+        "babel-plugin-react-compiler": "0.0.0-experimental-2bc6fec-20240909",
         "concurrently": "9.0.0",
         "critters": "0.0.24",
-        "eslint-config-next": "canary",
+        "eslint-config-next": "15.0.0-canary.147",
         "eslint": "8.57.0",
         "graphql": "16.9.0",
         "happy-dom": "15.7.3",
