--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -48,7 +48,7 @@
         "@apollo/experimental-nextjs-app-support": "0.11.3",
         "@markdoc/markdoc": "0.4.0",
         "@markdoc/next.js": "0.3.7",
-        "@next/third-parties": "canary",
+        "@next/third-parties": "14.2.9",
         "@nordcom/commerce-db": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
         "@nordcom/commerce-marketing-common": "workspace:*",
@@ -57,6 +57,7 @@
         "@vercel/analytics": "1.3.1",
         "@vercel/otel": "1.8.1",
         "@vercel/speed-insights": "1.0.5",
+        "@vercel/toolbar": "0.1.18",
         "accept-language-parser": "1.5.0",
         "clsx": "2.1.1",
         "colord": "2.9.3",
@@ -70,13 +71,13 @@
         "next-auth": "4.24.7",
         "next-seo": "6.6.0",
         "next-sitemap": "4.2.3",
-        "next": "canary",
+        "next": "15.0.0-canary.147",
         "nextjs-toploader": "3.6.15",
         "nprogress": "0.2.0",
         "png-to-ico": "2.1.8",
-        "react-dom": "rc",
+        "react-dom": "18.3.1",
         "react-icons": "5.1.0",
-        "react": "rc",
+        "react": "18.3.1",
         "sass": "1.78.0",
         "sharp": "0.33.5",
         "sonner": "1.5.0",
@@ -98,9 +99,10 @@
         "@types/react-dom": "18.2.24",
         "@types/react": "18.2.75",
         "autoprefixer": "10.4.20",
+        "babel-plugin-react-compiler": "0.0.0-experimental-2bc6fec-20240909",
         "concurrently": "9.0.0",
         "critters": "0.0.24",
-        "eslint-config-next": "canary",
+        "eslint-config-next": "15.0.0-canary.147",
         "eslint": "8.57.0",
         "graphql": "16.9.0",
         "happy-dom": "15.7.3",
