--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -76,13 +76,13 @@
         "next-auth": "5.0.0-beta.20",
         "next-seo": "6.6.0",
         "next-sitemap": "4.2.3",
-        "next": "15.0.0-canary.147",
+        "next": "15.0.0-canary.149",
         "nextjs-toploader": "3.6.15",
         "nprogress": "0.2.0",
         "png-to-ico": "2.1.8",
-        "react-dom": "18.3.1",
+        "react-dom": "19.0.0-rc-3dfd5d9e-20240910",
         "react-icons": "5.1.0",
-        "react": "18.3.1",
+        "react": "19.0.0-rc-3dfd5d9e-20240910",
         "sharp": "0.33.5",
         "sonner": "1.5.0",
         "tailwind-merge": "2.5.2",
@@ -103,10 +103,10 @@
         "@types/nprogress": "0.2.3",
         "@types/react-dom": "18.2.24",
         "@types/react": "18.2.75",
-        "babel-plugin-react-compiler": "0.0.0-experimental-2bc6fec-20240909",
+        "babel-plugin-react-compiler": "0.0.0-experimental-2bc6fec-20240910",
         "concurrently": "9.0.0",
         "critters": "0.0.24",
-        "eslint-config-next": "15.0.0-canary.147",
+        "eslint-config-next": "15.0.0-canary.149",
         "eslint": "8.57.0",
         "graphql": "16.9.0",
         "happy-dom": "15.7.3",
