--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -71,13 +71,13 @@
         "next-auth": "4.24.7",
         "next-seo": "6.6.0",
         "next-sitemap": "4.2.3",
-        "next": "15.0.0-canary.147",
+        "next": "15.0.0-canary.149",
         "nextjs-toploader": "3.6.15",
         "nprogress": "0.2.0",
         "png-to-ico": "2.1.8",
-        "react-dom": "18.3.1",
+        "react-dom": "19.0.0-rc-3dfd5d9e-20240910",
         "react-icons": "5.1.0",
-        "react": "18.3.1",
+        "react": "19.0.0-rc-3dfd5d9e-20240910",
         "sass": "1.78.0",
         "sharp": "0.33.5",
         "sonner": "1.5.0",
@@ -99,10 +99,10 @@
         "@types/react-dom": "18.2.24",
         "@types/react": "18.2.75",
         "autoprefixer": "10.4.20",
-        "babel-plugin-react-compiler": "0.0.0-experimental-2bc6fec-20240909",
+        "babel-plugin-react-compiler": "0.0.0-experimental-2bc6fec-20240910",
         "concurrently": "9.0.0",
         "critters": "0.0.24",
-        "eslint-config-next": "15.0.0-canary.147",
+        "eslint-config-next": "15.0.0-canary.149",
         "eslint": "8.57.0",
         "graphql": "16.9.0",
         "happy-dom": "15.7.3",
