--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -70,16 +70,16 @@
         "lodash.debounce": "4.0.8",
         "mongoose": "8.3.1",
         "next-sitemap": "4.2.3",
-        "next": "15.0.0-canary.147",
+        "next": "15.0.0-canary.149",
         "nextjs-toploader": "3.6.15",
         "nprogress": "0.2.0",
-        "react-dom": "18.3.1",
+        "react-dom": "19.0.0-rc-3dfd5d9e-20240910",
         "react-error-boundary": "4.0.13",
         "react-icons": "5.1.0",
         "react-ipgeolocation": "1.4.0",
         "react-live-chat-loader": "2.9.2",
         "react-share": "5.1.0",
-        "react": "18.3.1",
+        "react": "19.0.0-rc-3dfd5d9e-20240910",
         "redis": "4.7.0",
         "resolve-accept-language": "3.1.6",
         "sass": "1.78.0",
@@ -104,10 +104,10 @@
         "@types/react-dom": "18.2.24",
         "@types/react": "18.2.75",
         "autoprefixer": "10.4.20",
-        "babel-plugin-react-compiler": "0.0.0-experimental-2bc6fec-20240909",
+        "babel-plugin-react-compiler": "0.0.0-experimental-2bc6fec-20240910",
         "concurrently": "9.0.0",
         "critters": "0.0.24",
-        "eslint-config-next": "15.0.0-canary.147",
+        "eslint-config-next": "15.0.0-canary.149",
         "eslint": "8.57.0",
         "graphql": "16.9.0",
         "happy-dom": "15.7.3",
