--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -65,6 +65,7 @@
         "@vercel/speed-insights": "1.0.5",
         "@vercel/toolbar": "0.1.20",
         "clsx": "2.1.1",
+        "cookies-next": "4.2.1",
         "colord": "2.9.3",
         "convert-units": "2.3.4",
         "country-code-lookup": "0.1.3",
