--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -65,16 +65,17 @@
         "@vercel/speed-insights": "1.0.5",
         "@vercel/toolbar": "0.1.20",
         "clsx": "2.1.1",
-        "cookies-next": "4.2.1",
         "colord": "2.9.3",
         "convert-units": "2.3.4",
+        "cookies-next": "4.2.1",
         "country-code-lookup": "0.1.3",
+        "crypto-js": "4.2.0",
         "ioredis": "5.4.1",
         "lodash.debounce": "4.0.8",
         "mongoose": "8.3.1",
         "next-auth": "5.0.0-beta.21",
         "next-sitemap": "4.2.3",
-        "next": "15.0.0-canary.150",
+        "next": "15.0.0-canary.157",
         "nextjs-toploader": "3.6.15",
         "nprogress": "0.2.0",
         "react-dom": "19.0.0-rc-3dfd5d9e-20240910",
@@ -102,6 +103,7 @@
         "@testing-library/react": "16.0.1",
         "@types/accept-language-parser": "1.5.6",
         "@types/convert-units": "2.3.9",
+        "@types/crypto-js": "4.2.2",
         "@types/lodash.debounce": "4.0.9",
         "@types/node": "20.12.7",
         "@types/nprogress": "0.2.3",
@@ -112,7 +114,7 @@
         "concurrently": "9.0.1",
         "critters": "0.0.24",
         "dotenv": "16.4.5",
-        "eslint-config-next": "15.0.0-canary.150",
+        "eslint-config-next": "15.0.0-canary.157",
         "eslint": "8.57.1",
         "graphql": "16.9.0",
         "happy-dom": "15.7.4",
