--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "devDependencies": {
         "@nordcom/prettier": "0.1.1",
         "@types/node": "20.12.7",
-        "@types/react": "18.2.75",
         "@types/react-dom": "18.2.24",
+        "@types/react": "18.2.75",
         "@typescript-eslint/eslint-plugin": "8.0.0",
         "@typescript-eslint/parser": "8.0.0",
         "@vitejs/plugin-react": "4.3.1",
@@ -79,16 +79,17 @@
         "eslint-plugin-unused-imports": "4.0.0",
         "eslint": "8.57.1",
         "glob": "11.0.0",
+        "import-in-the-middle": "1.11.0",
         "mongoose": "8.4.0",
-        "prettier": "3.3.3",
         "prettier-eslint": "16.3.0",
         "prettier-plugin-tailwindcss": "0.6.6",
-        "turbo": "2.1.1",
+        "prettier": "3.3.3",
         "turbo-ignore": "2.1.1",
+        "turbo": "2.1.1",
         "typescript": "5.6.2",
-        "vite": "5.4.6",
         "vite-plugin-dts": "3.8.3",
         "vite-tsconfig-paths": "5.0.1",
+        "vite": "5.4.6",
         "vitest": "1.5.0"
     },
     "optionalDependencies": {
