--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,6 +109,7 @@
         "Sädesbingen",
         "Sahlin",
         "Sandström",
+        "signin",
         "Siitam",
         "slicemachine",
         "Sobolewski",
