--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -70,7 +70,7 @@
         "cookies-next": "4.2.1",
         "country-code-lookup": "0.1.3",
         "crypto-js": "4.2.0",
-        "ioredis": "5.4.1",
+        "redis": "4.7.0",
         "lodash.debounce": "4.0.8",
         "mongoose": "8.3.1",
         "next-auth": "5.0.0-beta.21",
