--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -91,6 +91,7 @@
         "use-context-selector": "2.0.0"
     },
     "devDependencies": {
+        "@builder.io/partytown": "0.10.2",
         "@happy-dom/global-registrator": "15.7.4",
         "@nordcom/prettier": "0.1.1",
         "@tailwindcss/forms": "0.5.9",
