--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -95,6 +95,7 @@
         "vercel": "37.3.0"
     },
     "devDependencies": {
+        "@builder.io/partytown": "0.10.2",
         "@happy-dom/global-registrator": "15.7.4",
         "@nordcom/prettier": "0.1.1",
         "@slicemachine/adapter-next": "0.3.49",
