--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -75,9 +75,9 @@
         "nextjs-toploader": "3.6.15",
         "nprogress": "0.2.0",
         "png-to-ico": "2.1.8",
-        "react-dom": "19.0.0-rc-5dcb0097-20240918",
+        "react-dom": "0.0.0-experimental-e740d4b1-20240919",
         "react-icons": "5.1.0",
-        "react": "19.0.0-rc-5dcb0097-20240918",
+        "react": "0.0.0-experimental-e740d4b1-20240919",
         "sass": "1.79.1",
         "sharp": "0.33.5",
         "sonner": "1.5.0",
