--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -78,13 +78,13 @@
         "next": "15.0.0-canary.159",
         "nextjs-toploader": "3.6.15",
         "nprogress": "0.2.0",
-        "react-dom": "19.0.0-rc-5dcb0097-20240918",
+        "react-dom": "0.0.0-experimental-e740d4b1-20240919",
         "react-error-boundary": "4.0.13",
         "react-icons": "5.1.0",
         "react-ipgeolocation": "1.4.0",
         "react-live-chat-loader": "2.9.2",
         "react-share": "5.1.0",
-        "react": "19.0.0-rc-5dcb0097-20240918",
+        "react": "0.0.0-experimental-e740d4b1-20240919",
         "resolve-accept-language": "3.1.7",
         "sass": "1.79.1",
         "sharp": "0.33.5",
