--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -74,6 +74,7 @@
         "cookies-next": "4.2.1",
         "country-code-lookup": "0.1.3",
         "crypto-js": "4.2.0",
+        "export-to-csv": "1.4.0",
         "lodash.debounce": "4.0.8",
         "mongoose": "8.6.3",
         "next-auth": "5.0.0-beta.21",
