--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -82,14 +82,15 @@
         "next": "15.0.0-canary.162",
         "nextjs-toploader": "3.6.15",
         "nprogress": "0.2.0",
+        "react-detect-click-outside": "1.1.7",
         "react-dom": "0.0.0-experimental-e4953922-20240919",
         "react-error-boundary": "4.0.13",
         "react-icons": "5.3.0",
         "react-ipgeolocation": "1.4.0",
-        "redis": "4.7.0",
         "react-live-chat-loader": "2.9.2",
         "react-share": "5.1.0",
         "react": "0.0.0-experimental-e4953922-20240919",
+        "redis": "4.7.0",
         "resolve-accept-language": "3.1.7",
         "sass": "1.79.3",
         "sharp": "0.33.5",
