--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -104,6 +104,7 @@
         "eslint": "8.57.1",
         "graphql": "16.9.0",
         "happy-dom": "15.7.4",
+        "postcss-import": "16.1.0",
         "postcss": "8.4.47",
         "prettier": "3.3.3",
         "rimraf": "6.0.1",
